--- a/imports/ui/assets/scss/components/_sidebar.scss
+++ b/imports/ui/assets/scss/components/_sidebar.scss
@@ -41,10 +41,12 @@
 }
 
 .sidebar-links {
-    margin: 1.5rem;
+    margin-top: 1.5rem;
 }
 
 .sidebar-nav-item {
+    margin: 0 1.5rem;
+
     a {
         border-radius: 4px;
         display: block;
