--- a/imports/ui/assets/scss/components/_card.scss
+++ b/imports/ui/assets/scss/components/_card.scss
@@ -47,6 +47,12 @@ body {
 .list-title {
     margin-bottom: 4rem;
     margin-left: 1rem;
+    display: flex;
+    align-items: center;
+
+    svg {
+        margin-right: 0.5rem;
+    }
 }
 
 .list-subtitle {
@@ -76,7 +82,7 @@ body {
     border-radius: 4px;
     background: transparent;
     padding: 0.25rem 1rem;
-    // transition: 0.25s ease-in-out;
+    transition: box-shadow $trans, margin $trans, padding $trans;
 }
 
 .card-item-check {
@@ -91,9 +97,9 @@ body {
 }
 
 .card-item-open {
-    box-shadow: $box-shadow-1;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 4px 16px rgba(0, 0, 0, 0.1);
+    margin-top: 2rem;
+    margin-bottom: 2rem;
     padding: 1rem;
     background: white;
 }
@@ -134,6 +140,10 @@ body {
     }
 }
 
+.area-title-group {
+    margin-bottom: 4rem;
+}
+
 .project-title {
     font-weight: 500;
     line-height: 1.1;
@@ -164,7 +174,8 @@ body {
     width: calc(100% - 3rem);
     caret-color: #07c;
     border: none;
-    margin: 1rem 1rem;
+    margin: 1rem;
+    margin-bottom: 4rem;
     padding: 0;
     outline: 0;
     resize: none;
