--- a/imports/ui/assets/scss/components/_header.scss
+++ b/imports/ui/assets/scss/components/_header.scss
@@ -3,6 +3,10 @@
     border-bottom: $border;
 }
 
+.navbar-light {
+    background: $white;
+}
+
 .popover-menu {
     position: relative;
     display: inline-block;
