--- a/imports/ui/assets/scss/components/_sidebar.scss
+++ b/imports/ui/assets/scss/components/_sidebar.scss
@@ -108,8 +108,8 @@
 }
 
 .sidebar-footer {
-    position: absolute;
-    bottom: 0;
+    // position: absolute;
+    // bottom: 0;
     width: 100%;
     border-top: $border;
     padding: 0.25rem 1rem;
