--- a/imports/ui/assets/scss/components/_footer.scss
+++ b/imports/ui/assets/scss/components/_footer.scss
@@ -1,6 +1,6 @@
 .footer-main {
     background: white;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     width: 100%;
     padding: 0.25rem 0;
@@ -28,4 +28,3 @@
 .footer-button:hover:not(:disabled) {
     border: $border;
 }
-
