--- a/client/main.scss
+++ b/client/main.scss
@@ -14,4 +14,5 @@
 @import "{}/imports/ui/assets/scss/components/_header.scss";
 @import "{}/imports/ui/assets/scss/components/_footer.scss";
 @import "{}/imports/ui/assets/scss/components/_sidebar.scss";
+@import "{}/imports/ui/assets/scss/components/_forms.scss";
 @import "{}/imports/ui/assets/scss/components/_card.scss";
