--- a/imports/ui/assets/scss/components/_sidebar.scss
+++ b/imports/ui/assets/scss/components/_sidebar.scss
@@ -86,6 +86,9 @@
         margin: 0;
         padding: 0;
         flex-grow: 1;
+        color: #212529;
+        font-weight: 500;
+        font-size: 14px;
     }
 
     .sidebar-nav-length {
