--- a/imports/ui/assets/scss/components/_forms.scss
+++ b/imports/ui/assets/scss/components/_forms.scss
@@ -5,11 +5,24 @@
     margin: 0 auto;
 }
 
-.form-signin input[type="email"] {
-    margin-bottom: -1px;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
+.form-signin .form-labels {
+    .form-label-group .form-control {
+        margin-bottom: -1px;
+        border-radius: 0;
+    }
+
+    .form-label-group:first-child .form-control {
+        margin-bottom: -1px;
+        border-top-right-radius: 4px;
+        border-top-left-radius: 4px;
+    }
+
+    .form-label-group:last-child .form-control {
+        border-bottom-right-radius: 4px;
+        border-bottom-left-radius: 4px;
+    }
 }
+
 
 .form-signin .form-control {
     position: relative;
@@ -17,6 +30,10 @@
     height: auto;
     padding: 10px;
     font-size: 16px;
+
+    &:focus {
+        z-index: 1;
+    }
 }
 
 .form-signin .checkbox {
